<resources>
    <string name="app_name">Hover By</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_email">Sign up with Email</string>
    <string name="by_signing_in_you_agree_to_our_terms_and_conditions">By Signing in you agree to our Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="take_it_day_by_day">Take it Day by Day</string>
    <string name="sign_up_to_continue">We need your information</string>
    <string name="hello">Hello!</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="your_email">Your email</string>
    <string name="your_fullname">Your fullname</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="new_post">New Post</string>
    <string name="share">Share</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="ask_your_question">Ask your Question</string>
    <string name="comments">Comments</string>
    <string name="text">text</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="settings">Settings</string>
    <string name="new_profile_photo">New Profile Photo</string>
    <string name="remove_profile_photo">Remove Profile Photo</string>
    <string name="userid">USERID</string>
    <string name="pratham_khurana">Pratham Khurana</string>
    <string name="post">Post</string>
    <string name="bio">At a Glance</string>
    <string name="bio_head">Bio</string>
    <string name="Profile">Profile</string>
    <string name="_0">0</string>
    <string name="ask_a_new_question">Ask a new Question</string>
    <string name="loading">L O A D I N G</string>
    <string name="_404">4 0 4</string>
    <string name="c_o_n_t_e_n_t_n_o_t_f_o_u_n_d">C O N T E N T N O T F O U N D</string>
    <string name="iconheading">IconHeading</string>
    <string name="testing">Testing</string>
    <string name="testing_is_awecome">Testing is awecome</string>
    <string name="_4_m_ago">4 m ago</string>
    <string name="please_check_your_internet_settings">Please Check your Internet Settings.</string>
    <string name="no_internet_connection_found">No Internet connection Found</string>
    <string name="whoops">Whoops</string>
    <string name="reload">RELOAD</string>
    <string name="report">Report</string>
    <string name="list_items">List Items</string>
    <string name="insights">Insights</string>
    <string name="find_all_your_details_here">Find all your details here</string>
    <string name="edit_your_stuff_here">Edit your Stuff here</string>
    <string name="modify_your_data_here">Modify your data here</string>
    <string name="own_comments">Own Comments</string>
    <string name="comments_you_added_to_posts">Comments You added to posts</string>
    <string name="have_a_look">Have a look. . .</string>
    <string name="time">time</string>
    <string name="bios">Bio</string>
    <string name="posts">Posts</string>
</resources>
