<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/hello"
                android:layout_toStartOf="@+id/userProfile"
                android:textSize="50sp"
                android:id="@+id/hello"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:layout_marginStart="15dp"
                android:layout_toStartOf="@+id/userProfile"
                android:layout_marginLeft="15dp"
                android:textColor="#505050"
                android:textSize="18sp"
                android:id="@+id/tag"
                android:layout_below="@+id/hello"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/userProfile"
                android:src="@drawable/ic_action_name" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userProfile"
                android:id="@+id/nameLayout"
                android:focusableInTouchMode="true"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:id="@+id/nameText"
                    android:inputType="text"
                    android:hint="@string/name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameLayout"
                android:id="@+id/phoneLayout"
                android:focusableInTouchMode="true"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:id="@+id/phoneNumber"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:hint="@string/phone_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneLayout"
                android:id="@+id/bioLayout"
                android:focusableInTouchMode="true"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio_head"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:id="@+id/bio"
                    android:inputType="textShortMessage"
                    android:layout_marginRight="30dp"
                    android:hint="@string/bio_head"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bioLayout"
                android:id="@+id/genderLayout"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/spinners" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/progress"
                android:visibility="invisible"
                android:orientation="horizontal">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Setting Up Profile"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_create"
                android:textColor="#fff"
                android:layout_below="@+id/genderLayout"
                android:id="@+id/fab"
                android:layout_marginTop="15dp"
                android:text="@string/create_account"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/by_signing_in_you_agree_to_our_terms_and_conditions"
                android:textColor="#fff"
                android:elevation="2dp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/design"
                android:layout_below="@+id/fab"
                android:layout_marginTop="30dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/back_svg"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>